fixed whitespaces

--- a/site/assets/css/common.css
+++ b/site/assets/css/common.css
@@ -101,7 +101,7 @@ ol {
 
 .inner.row {
     max-width: 100%;
-    padding: 150px 20px 60px 0;
+    padding: 150px 0 60px 0;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -115,20 +115,18 @@ ol {
     width: 100%;
 }
 
-#one::before {
+#banner::after {
     content: "";
     display: block;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23347EBF%3B' /%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23982323%3B' /%3E%3C/svg%3E");
     height: 90px;
     width: 100%;
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    transform: translate(0, -90px);
+    transform: scale(-1, -1) translate(0, -90px);
 }
-
 .image {
     border-style: solid;
-    border-width: 3px;
     border-color: white;
     margin: 0;
 }
@@ -170,12 +168,12 @@ ol {
     padding: 15px 50px;   
 }
 
-.banner {
+#banner {
     background-color: rgba(152, 35, 35, 1);
     width: 100%;
 }
 
-.banner .title {
+#banner .title {
     font-size: 1em;
     font-weight: 200;
     letter-spacing: 0.1em;
@@ -185,17 +183,6 @@ ol {
     
 }
 
-.banner::after {
-    content: "";
-    display: block;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23982323%3B' /%3E%3C/svg%3E");
-    height: 50px;
-    width: 100%;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    transform: scale(-1, -1) translate(0, -50px);
-    box-shadow: 1
-}
 
 .header {
     margin: auto;
