--- a/site/assets/css/results.css
+++ b/site/assets/css/results.css
@@ -1,10 +1,11 @@
 .resultsViz {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     max-width: 1000px;
     position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
+    overflow: hidden;
+    right: 50%;
+    transform: translate(50%, 0);
 }
 
 section {
